# morgan-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEEPSEEK_GUIDE.md  PROJECT_MANAGEMENT.md  PROJECT_SUMMARY.md  QUICKSTART_CN.md  QUICKSTART_EN.md  README_CN.md  README_EN.md  REASONING_FIX.md  SIMPLIFIED_PROJECT.md  STREAMING_IMPLEMENTATION.md  STREAMING_TOOL_CALL_FIXES.md  STREAMING_TUI_TEST.md  TOOL_CALL_FIX.md  TOOL_PANEL_FIX.md  TUI_IMPLEMENTATION_SUMMARY.md  USAGE_CN.md  USAGE_EN.md  VC_QUICK_REFERENCE.txt  VERSION_CONTROL_GUIDE.md  debug_tophub.py  demo_streaming.sh  run_all_tests.sh  simple_tui_test.sh  test_script.py  test_streaming.sh  test_tool_display.sh  test_tui.exp  test_tui.sh  test_tui_detailed.exp  test_zhihu_api.py  test_zhihu_direct.py  test_zhihu_direct2.py  test_zhihu_login_flow.py  test_zhihu_mobile_api.py  test_zhihu_rss.py  vc  (+18 more)
.claude/: settings.local.json
analysis/: guangong_vs_qinqiong  guangong_vs_qinqiong.rs  guangong_vs_qinqiong_analysis.md
examples/: debug_mode_parsing.rs  debug_toml.rs
scripts/: README.md  start.sh  version-control.sh
src/: error.rs  lib.rs  main.rs  markdown.rs
src/agent/: agent.rs
src/config/: types.rs
src/llm/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  traits.rs  types.rs
src/project/: mod.rs
src/session/: context.rs  mod.rs
src/tools/: mod.rs  registry.rs  shell.rs  tool.rs
src/tools/fs/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/ui/: events.rs  layout.rs  mod.rs  renderer.rs  spinner.rs  state.rs  streaming.rs  tui.rs
src/ui/widgets/: chat.rs  (+5 more)
tests/: integration_test.rs
